FIX redoc visibility

--- a/daikoku/javascript/src/style/layout/style.scss
+++ b/daikoku/javascript/src/style/layout/style.scss
@@ -251,3 +251,7 @@ img:hover+.changePicture,.changePicture:hover{
   width: 0;
   z-index: -1;
 }
+
+#redoc-container {
+  background-color: #fafafa;
+}
